# luau-wasm

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: index.html
luau_wasm/: __init__.py
native/: _luau.cpp
scripts/: build-pyodide-wheel.sh  build-wheel.sh  vendor-luau.sh
tests/: test_luau_wasm.py
