[project]
name = "luau-wasm"
version = "0.1"
description = "Luau packaged for Pyodide"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
dependencies = [

]

[dependency-groups]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/simonw/luau-wasm"
Changelog = "https://github.com/simonw/luau-wasm/releases"
Issues = "https://github.com/simonw/luau-wasm/issues"
CI = "https://github.com/simonw/luau-wasm/actions"

